--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -8,3 +8,11 @@
   font-weight: bold;
   font-size: large;
 }
+
+.search-value-custom[searchAttribute="expressionsearch#subjectRegex"] {
+  -moz-binding: url("chrome://expressionsearch/content/bindings.xml#expressionSearchTextBoxBinding");
+}
+
+.search-value-custom[searchAttribute="expressionsearch#dayTime"] {
+  -moz-binding: url("chrome://expressionsearch/content/bindings.xml#expressionSearchTextBoxBinding");
+}
