attachmentNameOrType issues so far are sometimes the value changed in the search dialog can't be reflected to searchValue

--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -17,6 +17,6 @@
   -moz-binding: url("chrome://expressionsearch/content/bindings.xml#expressionSearchTextBoxBinding");
 }
 
-.search-value-custom[searchAttribute="expressionsearch#attachmentName"] {
+.search-value-custom[searchAttribute="expressionsearch#attachmentNameOrType"] {
   -moz-binding: url("chrome://expressionsearch/content/bindings.xml#expressionSearchTextBoxBinding");
 }
