--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -61,3 +61,9 @@
 #quick-filter-bar-collapsible-buttons.showlabel toolbarbutton label.toolbarbutton-text {
   display: inline;
 }
+
+/* if the width is not enough, make the placehoder flexiable to make my box shown */
+.titlebar-placeholder {
+  flex: 100;
+  -moz-box-flex: 100;
+}
