--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -62,8 +62,20 @@
   display: inline;
 }
 
-/* if the width is not enough, make the placehoder flexiable to make my box shown */
+/* if the width is not enough, make others more flexiable to make my box shown */
+#qfb-filter-bar-spacer {
+  /* do in es.js based on position */
+}
+
+#qfb-results-label {
+  flex: 5 1;
+  min-width: 10px;
+}
+
+#expression-search-textbox {
+  flex: 5 1;
+}
+
 .titlebar-placeholder {
-  flex: 100;
-  -moz-box-flex: 100;
+  flex: 0.1 100;
 }
