add option for minimize the size of results label decrease the size of spacer

--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -69,8 +69,8 @@
 /* if the width is not enough, make others more flexiable to make my box shown */
 #qfb-filter-bar-spacer {
   /* do in es.js based on position */
-  margin: 0px;
-  padding: 0px;
+  margin: 0px !important;
+  padding: 0px !important;
 }
 
 #qfb-results-label {
