Compatible with TB38 nightly and drop support for TB version less than 31 Add option to put the Expression Search field into the Tab bar Add option to (not) remove the domain name for click2search Add option to hide the quick search filter icons Fix click2search issues on TB nightly

--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -58,13 +58,17 @@
   color: #f66;
 }
 
-/* force show or hide button text */
+/* force show or hide button & it's text */
 #quick-filter-bar-collapsible-buttons.hidelabel toolbarbutton label.toolbarbutton-text {
   display: none;
 }
 
 #quick-filter-bar-collapsible-buttons.showlabel toolbarbutton label.toolbarbutton-text {
   display: inline;
+}
+
+#quick-filter-bar-collapsible-buttons.hideall, #qfb-filter-bar-spacer.hideall {
+  display: none;
 }
 
 /* if the width is not enough, make others more flexiable to make my box shown */
