--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -9,7 +9,7 @@
   font-size: large;
 }
 
-/* InfoBackground, the CSS2 color was deprecated, will cause black ground in Ubuntu */
+/* InfoBackground, the CSS2 color was deprecated, is black in Ubuntu */
 #expression-search-tooltip.forceInfo {
   background-color: #ffffe1 !important;
   -moz-appearance: none !important;
@@ -45,17 +45,28 @@
   padding: 0px;
 }
 
-/* make the main bar looks better when placed on menubar/toolbar */
+/* quick-filter-bar on OSX has a default height 25px, need to hide it when move elements to other places */
+#quick-filter-bar.resetHeight {
+  /*
+  https://developer.mozilla.org/en-US/docs/Web/CSS/initial
+  stackoverflow.com/questions/15901030/reset-remove-css-styles-for-element-only
+  */
+  height: initial; /* is auto */
+}
+
+/* make the main bar looks better when placed on menubar/toolbar/tabbar */
 #mail-bar3 #quick-filter-bar-main-bar,
-#mail-toolbar-menubar2 #quick-filter-bar-main-bar {
+#mail-toolbar-menubar2 #quick-filter-bar-main-bar,
+#tabs-toolbar #quick-filter-bar-main-bar {
   width: 600px;
   -moz-box-flex: 1;
   flex: 1;
   background-color: transparent;
+  background-image: inherit;
   border: 0 solid red; /* for TB5, force no border */
 }
 
-/* fix the result label color issue when placed on menubar/toolbar */
+/* fix the result label color issue when placed on menubar/toolbar/tabbar */
 #qfb-results-label[filterActive="matches"] {
   color: green;
 }
